2006-05-17  Andy Jackson <andy@grapevinetech.co.uk>
	
	* tests/fileio1.c: Compiler warning fixes.
	* tests/testfs.c:  Compiler warning fixes.

2006-02-16  Peter Korsgaard  <jacmet@sunsite.dk>

	* src/misc.cxx (cyg_mtab_lookup): Corrected implementation for
	relative paths crossing mount points.
	* tests/fileio1.c (cyg_user_start): Add a test for the above fix.

2005-10-20  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/select.cxx: Needs sys/time.h for struct timeval.

2005-08-02  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/socket.c (SHOW_RESULT): Add a cast to avoid compiler
	warnings about the format string not matching the parameters.
	* tests/testfs.c: rename strcmp and strcpy to mystrcmp and
	mystrcpy to avoid clashes with the normal implementations.
	
2005-05-13  Peter Korsgaard  <jacmet@sunsite.dk>

	* src/devfs.cxx (dev_stat, dev_fo_fstat): Corrected mode for block
	devices, made nlink 1.
	* src/devfs.cxx (dev_fo_fstat): Set st_dev to zero to match dev_stat.

2005-05-26  Gary Thomas  <gary@mlbassoc.com>

	* tests/socket.c: Fix config test (CYGPKG_POSIX_SIGNALS)
	
	* tests/pselect.c: Fix config test (CYGPKG_POSIX_SIGNALS is
	only defined in <pkgconf/posix.h>)  Also, reduce number of
	iterations so test completes in a reasonable time (~30 seconds).

2005-03-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/testfs.c: Fixed compiler warnigs for passing wrong types
	to diag_printf.
	* tests/fileio1.c: Ditto
	* tests/select.c: Ditto


2005-02-24  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/fileio.h: Only include kapi.h when
	CYGFUN_IO_FILEIO_SELECT is enabled and then define the select
	support structures.

2005-01-27  Yoshinori Sato  <ysato@users.sourceforge.jp>

	* src/io.cxx (ioctl): Change ioctl to use varargs so that it works
	on with h8300 who's compiler does not like doing it the other way.
	
2005-01-22  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/misc.cxx (cyg_fs_root_lookup): New function to find the mount
	point of a give filesystems root directory.